# Projet-AOOPython

./: Projet.txt  README.md  class.py  main.py  main_view.py  pyproject.toml  reservations.json  rooms.json  setup.py  users.json
Model/: __init__.py  base_fonction.py  clients.py  database.py  reservation.py  room.py  storage.py
Projet/: __init__.py  projet.py
projet/: def_classe.py
projet/class/: class.py
src/: __init__.py  main.py
src/model/: base_fonction.py  clients.py  database.py  reservation.py  room.py
src/view/: add_client_view.py  add_room_view.py  display_available_room.py  display_list_client.py  display_list_room.py  display_reservation.py  display_view.py  main_view.py  reserve_view.py
tests/: test_model.py  test_projet.py
