@@ -1,13 +0,0 @@
[project]
name = ""
version = "0.1.0"
description = ""
authors = [{ name = "Arthur LEPROUST", email = "arthur.leproust77@gmail.com" }]
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
classifiers = ["Programming Language :: Python :: 3"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"